--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,10 @@
 [project]
+name = "deep-rts"  # Replace with your project's actual name if different
+version = "0.1.0"  # Specify a valid version
+description = "A brief description of the deep-rts project."
+authors = [
+    { name = "Your Name", email = "your.email@example.com" }
+]
 requires-python = ">=3.8"
 
 [build-system]
